[GSM is Greg Sabino Mullane <greg@endpoint.com> <greg@turnstep.com> ]

Bucardo version 4.5.0

  - Redo the makedelta system, and break into source_makedelta and target_makedelta 
    options for both syncs and goats. [GSM]

  - Fix for proper sourcelimit and targetlimit calculations. [GSM]

  - Allow 'list sync' to filter by 'active' and 'inactive' [GSM]

  - Remove unused config variable 'upsert_attempts' [GSM]

  - Show detailed information on KID error exit. [GSM]

  - Fix bug in bucardo_purge_q_table in index detection logic. [Aolmezov]

  - Relax SELECT version() regex in bucardo_ctl, to let modified versions 
    of Postgres tell us their version. [GSM]

  - Fix incorrect automatic population of database when using bucardo_ctl 
    add database and only one database exists. [GSM]

  - New syncs of type fullcopy now default to false for ping, stayalive, 
    and kidsalive. [GSM, idea from Andrew Spencer]

  - Make sure we update bucardo_config.bucardo_current_version when doing 
    a bucardo_ctl upgrade [GSM] (Bug #5)

Bucardo version 4.4.0, released October 14, 2009

  - Allow validate_goat() to work correctly against pgbouncer databases by 
    respecting the server_side_prepares parameter. [GSM]

  - Loosen restrictions on customcode - now the derived columns must match 
    the target, but the target and source tables can be completely different. [GSM]

  - Add the bucardo_audit() function that runs on all master databases, ensures 
    that everything related to the bucardo_* control tables is correct.
    [Josh Tolley and GSM]

  - Fix bucardo_ctl add sync ... tables=x - now adds the sync on first pass, 
    even if the tables have not been added. [GSM]

  - Adding customcode via bucardo_ctl can now specify sync, goat, priority, 
    and active columns. [GSM]

  - When viewing customcode via 'bucardo_ctl list code foo', the src_code column 
    is shown last. [GSM]

  - Add some small sleeps before checking for stale pid files, to allow their owners 