@@ -5,6 +5,9 @@ Bucardo version 4.5.0
   - Redo the makedelta system, and break into source_makedelta and target_makedelta 
     options for both syncs and goats. [GSM]
 
+  - Allow triggers and rules to work on bucardo_delta and bucardo_track by 
+    setting *_makedelta to "2" [GSM]
+
   - Fix for proper sourcelimit and targetlimit calculations. [GSM]
 
   - Allow 'list sync' to filter by 'active' and 'inactive' [GSM]
